--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,9 +1,15 @@
 name: CI Pipeline
+
 on:
   push:
     branches:
       - main
   pull_request:
+  
+permissions:
+  contents: read
+  security-events: write
+  id-token: write
 
 env:
   AWS_REGION: us-east-1
@@ -30,20 +36,6 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Cache SonarCloud packages by source hash
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar-${{ hashFiles('**/*.java') }}
-          restore-keys: |
-            ${{ runner.os }}-sonar-
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -92,15 +84,14 @@ jobs:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
 
-          
-
-  # Job 2: Build and Scan Docker Image
-  build-and-scan:
-    name: Build and Scan Docker Image
+        
+  # Job 2: Build, Scan, and Push Docker Image
+  build-scan-and-push:
+    name: Build, Scan, and Push Docker Image
     runs-on: ubuntu-latest
     needs:
       - sonarcloud-analysis
-      - cache-docker-layers
+      - cache-docker-layers      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -116,13 +107,13 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
-        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      # Step 1: Build Docker image
       - name: Build Docker image
         run: |
           docker build -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
-
+      # Step 2: Scan image
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -138,36 +129,63 @@ jobs:
         with:
           sarif_file: trivy-results.sarif
 
+      # Step 3: Tag & Push image (only if build & scan succeed)
+      - name: Tag and Push Docker image to ECR
+        run: |
+          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
+          echo "Pushing image to $IMAGE_URI"
+          
+          # Tag both latest and commit SHA
+          docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:latest
+          docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
+          # Push both tags
+          docker push $IMAGE_URI:latest
+          docker push $IMAGE_URI:${{ github.sha }}
+
+      # Step 4: Push image to Docker Hub (backup)
+      - name: Push Docker image to Docker Hub
+        run: |
+          echo "Logging in to Docker Hub..."
+          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+          IMAGE_NAME=${{ env.ECR_REPOSITORY }}
+          IMAGE_TAG=${{ github.sha }}
+
+          echo "Tagging image for Docker Hub..."
+          docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
+          docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
+
+          echo "Pushing image to Docker Hub..."
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
+          docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
+
+          echo "✅ Image pushed to Docker Hub successfully!"
+
   # Job 3: Notify Success
   notify-success:
     name: Send Success Notification
     runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-and-scan]
+    needs: [sonarcloud-analysis, build-scan-and-push]
     if: success()
     steps:
       - name: Send Slack Success Notification
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
-          curl -X POST -H 'Content-type: application/json' --data @- "$SLACK_WEBHOOK_URL" <<EOF
-          {
-            "text": "✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA"
-          }
-          EOF
-
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
+          "$SLACK_WEBHOOK_URL"
   # Job 4: Notify Failure
   notify-failure:
     name: Send Failure Notification
     runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis, build-and-scan]
+    needs: [sonarcloud-analysis, build-scan-and-push]
     if: failure()
     steps:
       - name: Send Slack Failure Notification
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
-          curl -X POST -H 'Content-type: application/json' --data @- "$SLACK_WEBHOOK_URL" <<EOF
-          {
-            "text": "❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA"
-          }
-          EOF
+          curl -X POST -H 'Content-type: application/json' \
+          --data "{\"text\":\"❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
+          "$SLACK_WEBHOOK_URL"
