--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,11 +5,10 @@ on:
     branches:
       - main
   pull_request:
-  
+
 permissions:
   contents: read
   security-events: write
-  id-token: write
 
 env:
   AWS_REGION: us-east-1
@@ -18,6 +17,7 @@ env:
   SONAR_PROJECT_KEY: sonar-test-e-commerce_new-sonarscan
   SONAR_ORGANIZATION: sonar-test-e-commerce
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  IMAGE_URI: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
 
 jobs:
   # Job 1: SonarCloud Code Analysis
@@ -36,7 +36,6 @@ jobs:
           distribution: temurin
           java-version: 17
 
-
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         env:
@@ -51,48 +50,12 @@ jobs:
             -Dsonar.coverage.exclusions=aiops/detector/detector.py
             -Dsonar.qualitygate.wait=true
 
-  cache-docker-layers:
-    name: Cache Docker Layers
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Restore layer cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Build image to warm cache (no push)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          tags: cache-warm:${{ github.sha }}
-          load: false
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-
-      - name: Save updated cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
-
-        
   # Job 2: Build, Scan, and Push Docker Image
   build-scan-and-push:
     name: Build, Scan, and Push Docker Image
     runs-on: ubuntu-latest
     needs:
       - sonarcloud-analysis
-      - cache-docker-layers      
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -110,11 +73,16 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # Step 1: Build Docker image
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ env.ECR_REPOSITORY }}:${{ github.sha }} .
-      # Step 2: Scan image
+      - name: Build Docker image with cache
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: ${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -130,37 +98,25 @@ jobs:
         with:
           sarif_file: trivy-results.sarif
 
-      # Step 3: Tag & Push image (only if build & scan succeed)
       - name: Tag and Push Docker image to ECR
         run: |
-          IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
           echo "Pushing image to $IMAGE_URI"
-          
-          # Tag both latest and commit SHA
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:latest
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
-          # Push both tags
           docker push $IMAGE_URI:latest
           docker push $IMAGE_URI:${{ github.sha }}
 
-      # Step 4: Push image to Docker Hub (backup)
-      - name: Push Docker image to Docker Hub
+      - name: Push Docker image to Docker Hub (main only)
+        if: github.ref == 'refs/heads/main'
         run: |
           echo "Logging in to Docker Hub..."
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
           IMAGE_NAME=${{ env.ECR_REPOSITORY }}
           IMAGE_TAG=${{ github.sha }}
-
-          echo "Tagging image for Docker Hub..."
           docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
           docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
-
-          echo "Pushing image to Docker Hub..."
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
-
-          echo "✅ Image pushed to Docker Hub successfully!"
 
   # Job 3: Notify Success
   notify-success:
@@ -176,6 +132,7 @@ jobs:
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
           "$SLACK_WEBHOOK_URL"
+
   # Job 4: Notify Failure
   notify-failure:
     name: Send Failure Notification
