--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,8 +47,7 @@ jobs:
             -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
             -Dsonar.sources=.
             -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.test.js,**/*.spec.js
-            -Dsonar.coverage.exclusions=aiops/detector/detector.py
-            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+            -Dsonar.coverage.exclusions=**/* 
             -Dsonar.qualitygate.wait=true
 
   cache-docker-layers:
