--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,8 +46,7 @@ jobs:
             -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
             -Dsonar.sources=.
-            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.test.js,**/*.spec.js
-            -Dsonar.coverage.exclusions=aiops/detector/detector.py
+            -Dsonar.exclusions=backend/server.js,aiops/**,**/node_modules/**,**/dist/**,**/build/**,**/*.test.js,**/*.spec.js
             -Dsonar.qualitygate.wait=true
   cache-docker-layers:
     name: Cache Docker Layers
