--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,7 +46,8 @@ jobs:
             -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ env.SONAR_ORGANIZATION }}
             -Dsonar.sources=.
-            -Dsonar.exclusions=backend/server.js,aiops/**,**/node_modules/**,**/dist/**,**/build/**,**/*.test.js,**/*.spec.js
+            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**,**/*.test.js,**/*.spec.js
+            -Dsonar.coverage.exclusions=**/* 
             -Dsonar.qualitygate.wait=true
   cache-docker-layers:
     name: Cache Docker Layers
