--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -69,7 +69,7 @@ jobs:
           name: dependency-check-report
           path: reports/
 
-  # Infrastructure as Code Scanning with Checkov
+  # 3. Infrastructure as Code Scanning with Checkov
   
   checkov-scan:
     runs-on: ubuntu-latest
@@ -89,9 +89,9 @@ jobs:
       - name: Run Checkov scan
         run: |
           checkov -d . \
-           -bc-api-key "" \
-           --soft-fail false \
-           -o json > checkov-report.json
+          -bc-api-key "" \
+          --no-soft-fail \
+          -o json > checkov-report.json
 
       - name: Upload report
         uses: actions/upload-artifact@v4
