--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -88,9 +88,10 @@ jobs:
 
       - name: Run Checkov scan
         run: |
-          checkov -d . \
-          --download-external-modules true \
-          -o json > checkov-report.json
+          checkov -d infrastructure \
+            --download-external-modules true \
+            -o json \
+            --output-file-path checkov-report.json
 
       - name: Upload report
         uses: actions/upload-artifact@v4
