Add soft-fail option to Checkov scan

--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -90,6 +90,7 @@ jobs:
         run: |
           checkov -d infrastructure \
             --download-external-modules true \
+            --soft-fail \
             -o json \
             --output-file-path checkov-report.json
 
