--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -128,6 +128,7 @@ jobs:
             -Dsonar.sources=.
             -Dsonar.coverage.exclusions=Backend/server.js,aiops/**
             -Dsonar.qualitygate.wait=true
+            
   cache-docker-layers:
     name: Cache Docker Layers
     runs-on: ubuntu-latest
@@ -167,6 +168,9 @@ jobs:
     name: Build, Scan, and Push Docker Image
     runs-on: ubuntu-latest
     needs:
+      - secret-scanning
+      - owasp-dependency-check
+      - checkov-scan
       - sonarcloud-analysis
       - cache-docker-layers      
     steps:
@@ -223,6 +227,7 @@ jobs:
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
           docker push $IMAGE_URI:latest
           docker push $IMAGE_URI:${{ github.sha }}
+          
       # Step 4: Push image to Docker Hub (backup)
       - name: Push Docker image to Docker Hub
         run: |
@@ -235,6 +240,7 @@ jobs:
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
           echo "✅ Image pushed to Docker Hub successfully!"
+          
   # Job 3: Notify Success
   notify-success:
     name: Send Success Notification
@@ -249,6 +255,7 @@ jobs:
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
           "$SLACK_WEBHOOK_URL"
+          
   # Job 4: Notify Failure
   notify-failure:
     name: Send Failure Notification
