--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   pull_request:
-  
+
 permissions:
   contents: read
   security-events: write
@@ -21,33 +21,34 @@ env:
 
 jobs:
 
-# Security Section
+  ###########################################
+  # 1. Secret Scanning (Gitleaks)
+  ###########################################
+  secret-scanning:
+    name: Secret Scanning (Gitleaks)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-# 1. Secret Scanning with GitLeaks
-   secret-scanning:
-   name: Secret Scanning (Gitleaks)
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout code
-       uses: actions/checkout@v4
-       with:
-         fetch-depth: 0
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
 
-     - name: Run Gitleaks
-       uses: gitleaks/gitleaks-action@v2
+      - name: Export Gitleaks Report
+        run: gitleaks detect -v --report-path=gitleaks-report.json
 
-     - name: Export Gitleaks Report
-       run: gitleaks detect -v --report-path=gitleaks-report.json
-
-     - name: Upload Report
-       uses: actions/upload-artifact@v4
-       with:
-         name: gitleaks-report
-         path: gitleaks-report.json
+      - name: Upload Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: gitleaks-report
+          path: gitleaks-report.json
 
 
-  # 2. OWASP DEPENDENCY CHECK
-
+  ###########################################
+  # 2. OWASP Dependency Check
+  ###########################################
   owasp-dependency-check:
     name: OWASP Dependency-Check
     runs-on: ubuntu-latest
@@ -68,11 +69,13 @@ jobs:
           name: dependency-check-report
           path: reports/
 
-  # 3. Infrastructure as Code Scanning with Checkov
-  
-  checkov-scan:
-    runs-on: ubuntu-latest
 
+  ###########################################
+  # 3. Checkov IaC Scan
+  ###########################################
+  checkov-scan:
+    name: Checkov IaC Scan
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -99,7 +102,10 @@ jobs:
           name: checkov-report
           path: checkov-report.json
 
-  # Job 1: SonarCloud Code Analysis
+
+  ###########################################
+  # 4. SonarCloud Code Analysis
+  ###########################################
   sonarcloud-analysis:
     name: SonarCloud Code Analysis
     runs-on: ubuntu-latest
@@ -127,7 +133,11 @@ jobs:
             -Dsonar.sources=.
             -Dsonar.coverage.exclusions=Backend/server.js,aiops/**
             -Dsonar.qualitygate.wait=true
-            
+
+
+  ###########################################
+  # 5. Cache Docker Layers
+  ###########################################
   cache-docker-layers:
     name: Cache Docker Layers
     runs-on: ubuntu-latest
@@ -145,6 +155,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
@@ -161,8 +172,10 @@ jobs:
           path: /tmp/.buildx-cache
           key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
 
-        
-  # Job 2: Build, Scan, and Push Docker Image
+
+  ###########################################
+  # 6. Build, Scan, and Push Docker Image
+  ###########################################
   build-scan-and-push:
     name: Build, Scan, and Push Docker Image
     runs-on: ubuntu-latest
@@ -171,7 +184,7 @@ jobs:
       - owasp-dependency-check
       - checkov-scan
       - sonarcloud-analysis
-      - cache-docker-layers      
+      - cache-docker-layers
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -189,7 +202,6 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # Step 1: Build Docker image (UPDATED HERE)
       - name: Build Docker image using Buildx with cache
         uses: docker/build-push-action@v5
         with:
@@ -200,7 +212,6 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
 
-      # Step 2: Scan image
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -216,21 +227,16 @@ jobs:
         with:
           sarif_file: trivy-results.sarif
 
-      # Step 3: Tag & Push image (only if build & scan succeed)
       - name: Tag and Push Docker image to ECR
         run: |
           IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
-          echo "Pushing image to $IMAGE_URI"
-          
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:latest
           docker tag ${{ env.ECR_REPOSITORY }}:${{ github.sha }} $IMAGE_URI:${{ github.sha }}
           docker push $IMAGE_URI:latest
           docker push $IMAGE_URI:${{ github.sha }}
-          
-      # Step 4: Push image to Docker Hub (backup)
+
       - name: Push Docker image to Docker Hub
         run: |
-          echo "Logging in to Docker Hub..."
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           IMAGE_NAME=${{ env.ECR_REPOSITORY }}
           IMAGE_TAG=${{ github.sha }}
@@ -238,9 +244,11 @@ jobs:
           docker tag $IMAGE_NAME:$IMAGE_TAG docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$IMAGE_TAG
           docker push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:latest
-          echo "✅ Image pushed to Docker Hub successfully!"
-          
-  # Job 3: Notify Success
+
+
+  ###########################################
+  # 7. Notify Success
+  ###########################################
   notify-success:
     name: Send Success Notification
     runs-on: ubuntu-latest
@@ -254,8 +262,11 @@ jobs:
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":\"✅ *CI Pipeline Succeeded!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\nImage pushed to ECR successfully.\"}" \
           "$SLACK_WEBHOOK_URL"
-          
-  # Job 4: Notify Failure
+
+
+  ###########################################
+  # 8. Notify Failure
+  ###########################################
   notify-failure:
     name: Send Failure Notification
     runs-on: ubuntu-latest
@@ -270,7 +281,10 @@ jobs:
           --data "{\"text\":\"❌ *CI Pipeline Failed!*\nRepository: $GITHUB_REPOSITORY\nBranch: $GITHUB_REF_NAME\nCommit: $GITHUB_SHA\"}" \
           "$SLACK_WEBHOOK_URL"
 
-  # Job 5: Notify Security Scan Results
+
+  ###########################################
+  # 9. Notify Security Scan Results
+  ###########################################
   notify-security:
     name: Send Security Scan Results
     runs-on: ubuntu-latest
@@ -282,19 +296,19 @@ jobs:
         with:
           name: gitleaks-report
           path: reports/gitleaks
-  
+
       - name: Download Dependency-Check report
         uses: actions/download-artifact@v4
         with:
           name: dependency-check-report
           path: reports/dependency-check
-  
+
       - name: Download Checkov report
         uses: actions/download-artifact@v4
         with:
           name: checkov-report
           path: reports/checkov
-  
+
       - name: Count issues
         id: count-issues
         run: |
@@ -304,7 +318,7 @@ jobs:
           echo "gl_count=$GL_COUNT" >> $GITHUB_ENV
           echo "dc_count=$DC_COUNT" >> $GITHUB_ENV
           echo "ckv_count=$CKV_COUNT" >> $GITHUB_ENV
-  
+
       - name: Send Slack Notification
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -313,8 +327,3 @@ jobs:
           curl -X POST -H 'Content-type: application/json' \
           --data "{\"text\":\"*Security Scan Results*\\nStatus: $STATUS\\nGitleaks secrets: $GL_COUNT\\nOWASP Dependency-Check issues: $DC_COUNT\\nCheckov IaC issues: $CKV_COUNT\\nRepository: $GITHUB_REPOSITORY\\nBranch: $GITHUB_REF_NAME\\nCommit: $GITHUB_SHA\"}" \
           "$SLACK_WEBHOOK_URL"
-
-
-  # OWASP ZAP BASELINE SCAN
-
-
