--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -45,9 +45,7 @@ jobs:
           gitleaks detect \
             --source . \
             --report-path=gitleaks-report.json \
-            --redact \
-            --no-fail \
-            --verbose
+          --verbose || true
 
       - name: Upload Report
         uses: actions/upload-artifact@v4
