--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -43,27 +43,23 @@ jobs:
             --report-format json \
             --report-path gitleaks-report.json \
             --no-fail
-
+  
       - name: Count Gitleaks issues
         id: count
         run: |
           if [ ! -f "gitleaks-report.json" ]; then
             echo "gl_count=0" >> $GITHUB_OUTPUT
-            exit 0
+          else
+            GL_COUNT=$(jq 'length' gitleaks-report.json)
+            echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
           fi
-      
-          GL_COUNT=$(jq 'length' gitleaks-report.json)
-          echo "gl_count=$GL_COUNT" >> $GITHUB_OUTPUT
-
-      
+  
       - name: Upload Gitleaks Report
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: gitleaks-report.json
-
-
-
+  
   ###########################################
   # 2. OWASP Dependency Check
   ###########################################
@@ -74,26 +70,31 @@ jobs:
       dc_count: ${{ steps.count.outputs.dc_count }}
     steps:
       - uses: actions/checkout@v4
-
+  
       - name: Run OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@1.1.0
         with:
           project: "e-commerce-app"
           path: "./"
           format: "HTML"
-
+  
       - name: Count Dependency-Check issues
         id: count
         run: |
-          DC_COUNT=$(grep -i -c 'vulnerability' reports/*.html || echo 0)
+          REPORT_FILE=$(find . -name "*.html" | head -n 1)
+          if [ -f "$REPORT_FILE" ]; then
+            DC_COUNT=$(grep -i -c 'vulnerability' "$REPORT_FILE" || echo 0)
+          else
+            DC_COUNT=0
+          fi
           echo "dc_count=$DC_COUNT" >> $GITHUB_OUTPUT
-
-      - name: Upload Checkov Report
+  
+      - name: Upload Dependency-Check Report
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
-          path: dependency-check-report.html
-
+          path: "*.html"
+  
   ###########################################
   # 3. Checkov IaC Scan
   ###########################################
@@ -104,14 +105,14 @@ jobs:
       ckv_count: ${{ steps.count.outputs.ckv_count }}
     steps:
       - uses: actions/checkout@v4
-
+  
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
+  
       - name: Install Checkov
         run: pip install checkov
-
+  
       - name: Run Checkov scan
         run: |
           checkov -d infrastructure \
@@ -119,18 +120,23 @@ jobs:
             --soft-fail \
             -o json \
             --output-file-path checkov-report.json
-
+  
       - name: Count Checkov issues
         id: count
         run: |
-          CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
-          echo "ckv_count=$CKV_COUNT" >> $GITHUB_OUTPUT
-
-      - name: Upload Dependency-Check Report
+          if [ ! -f "checkov-report.json" ]; then
+            echo "ckv_count=0" >> $GITHUB_OUTPUT
+          else
+            CKV_COUNT=$(jq '.results.failed_checks | length' checkov-report.json 2>/dev/null || echo 0)
+            echo "ckv_count=$CKV_COUNT" >> $GITHUB_OUTPUT
+          fi
+  
+      - name: Upload Checkov Report
         uses: actions/upload-artifact@v4
         with:
           name: checkov-report
           path: checkov-report.json
+
 
   ###########################################
   # 4. SonarCloud Code Analysis
